tests/NormalTests/paczka1/small_fuzzy/30546736.err
Error in line 1: wSmnGo3J0xE A967 42,7
Error in line 6: wSmnGo3J0xE A326 10,26
Error in line 2: wSmnGo3J0xE A326 20,8
Error in line 9: ldCCutp A523 71,7
